<resources>
    <string name="app_name">NewIqra</string>
    <string name="polis">Masukan Nomor Polis</string>
    <string name="cek">Cek</string>
    <string name="judul">Masukan Nomor Polis</string>
    <string name="dataPersonal">Data Personal</string>
    <string name="dataAsuransi">Data Asuransi</string>
    <string name="NoCIF">No. CIF</string>
    <string name="nama">Nama</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="kotaKelahiran">Kota Kelahiran</string>
    <string name="tglLahir">Tanggal Lahir</string>
    <string name="kartuIdentitas">Kartu Identitas</string>
    <string name="noIdentitas">Nomor Identitas</string>
    <string name="kartuIdentitas2">Kartu Identitas Lain</string>
    <string name="kewarganegaraan">Kewarganegaraan</string>
    <string name="statusPerkawinan">Status Perkawinan</string>
    <string name="alamatSM">Alamat Surat Menyurat</string>
    <string name="btnCek">Cek Riwayat Duplikat Polis</string>
    <string name="Upihak">Umur Pihak yang di Asuransikan</string>
    <string name="macamAsuransi">Macam Asuransi</string>
    <string name="masaAsuransi">Masa Asuransi</string>
    <string name="nilaiKontribusi">Nilai Kontribusi</string>
    <string name="masaPK">Masa Pembayaran Kontribusi</string>
    <string name="masaManfaat">Masa Manfaat</string>
    <string name="caraBayar">Cara Bayar</string>
    <string name="jenisMU">Jenis Mata Uang</string>
    <string name="manfaatAwal">Manfaat Awal</string>
    <string name="ekstraK">Ekstra Kontribusi</string>
    <string name="waiver">Waiver</string>
    <string name="rider">Rider</string>
    <string name="jenisResiko">Jenis Resiko</string>
    <string name="kelipatan">Kelipatan</string>
    <string name="aviasi">Aviasi</string>
    <string name="mulaiAsuransi">Mulai Asuransi</string>
    <string name="btnRiwayatPK">Lihat Riwayat Pembayaran Kontribusi</string>
    <string name="btnRiwayatNT">Riwayat Nilai Tunai</string>
    <string name="btnLapKlaim">Laporan Klaim</string>
    <string name="riwayatPollis">Riwayat Polis</string>
    <string name="nopol">Nomor Polis</string>
    <string name="bagiHN">Bagi Hasil Nasabah</string>
    <string name="namaPeserta">Nama Peserta</string>
    <string name="iurangTerbaru">Iuran Terbaru</string>
    <string name="jumlahNilaiDI">Jumlah Nilai Dana Investasi</string>
    <string name="no">NO </string>
    <string name="jtKontribusi">JT KONTRIBUSI </string>
    <string name="tglBK">TANGGAL BAYAR \n KONTRIBUSI </string>
    <string name="periode">PERIODE </string>
    <string name="dataInves">DANA \n INVESTASI </string>
    <string name="POT">POT \n OTOMATIS \n TABARU </string>
    <string name="returPOTtabaru">RETUR \n POT \n TABARU </string>
    <string name="returPOTujroh">RETUR \n POT \n UJROH </string>
    <string name="POTujroh">POT \n UJROH </string>
    <string name="danaTambahan">DANA \n TAMBAHAN </string>
    <string name="rate">RATE </string>
    <string name="bagiHasil">BAGI \n HASIL </string>
    <string name="nilaiTunai">NILAI TUNAI </string>
    <string name="bayarSebaianNT">BAYAR \n SEBAGIAN \n NT </string>
    <string name="opportunityCost">OPPORTUNITY \n COST </string>
    <string name="titipanKontribusi">TITIPAN \n KONTRIBUSI </string>
    <string name="klainDKB">KLAIM \n DKB </string>
    <string name="klaimMeninggal">KLAIM \n MENINGGAL </string>
    <string name="klaimHK">KLAIM \n HK </string>
    <string name="pengembalianNTS">PENGEMBALIAN \n NTS </string>
    <string name="klaimLainnya">KLAIM \n LAINNYA </string>
    <string name="jumlah">JUMLAH </string>
    <string name="riwayatPK">RIWAYAT PEMBAYARAN KONTRIBUSI</string>
    <string name="kd">KD</string>
    <string name="jthTempo">JTH TEMPO</string>
    <string name="tglBayar">TANGGAL BAYAR</string>
    <string name="noBuktiKas">NO BUKTI KAS</string>
    <string name="tabungan">TABUNGAN</string>
    <string name="tabaru">TABARRU</string>
    <string name="biaya">BIAYA</string>
    <string name="waiver1">WAIVER</string>
    <string name="raider">RAIDER</string>
    <string name="aviasi1">AVIASI</string>
    <string name="ekstra">EKSTRA</string>
    <string name="titipan">TITIPAN</string>
    <string name="NKTotal">NILAI KONTRIBUSI TOTAL</string>
    <string name="pass">Password</string>
    <string name="regis">Register</string>
    <string name="login">Login</string>
    <string name="Show">Show Password</string>
    <string name="akhirAsuransi">Akhir Asuransi</string>
    <string name="update">Update Password</string>
    <string name="laporanKlaim">Laporan Klaim</string>
    <string name="jenisKlaim">JENIS KLAIM</string>
    <string name="tglPengajuan">TANGGAL PENGAJUAN</string>
    <string name="tglOtorisasi">TANGGAL OTORISASI</string>
    <string name="statusKlaim">STATUS KLAIM</string>
    <string name="nilaiKlaim">NILAI KLAIM</string>
    <string name="namaKantor">NAMA KANTOR</string>
    <string name="namaKantor2">NAMA KANTOR LAIN</string>
    <string name="titik_dua">:</string>
    <string name="logout">Logout</string>
    <string name="cif">No. CIF</string>
    <string name="persen">70%</string>
    <string name="nilai_kontribusi_total">NILAI KONTRIBUSI TOTAL</string>
</resources>
