<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:padding="5dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua"
                    android:paddingEnd="5dp" />

                <TextView
                    android:id="@+id/lblArray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:padding="5dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/jthTempo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua"
                    android:paddingEnd="5dp" />

                <TextView
                    android:id="@+id/lblJth_tempo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:padding="5dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tglBayar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua"
                    android:paddingEnd="5dp" />

                <TextView
                    android:id="@+id/lblTgl_bayar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:padding="5dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tabungan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua"
                    android:paddingEnd="5dp" />

                <TextView
                    android:id="@+id/lblTabungan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:padding="5dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tabaru" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua"
                    android:paddingEnd="5dp" />

                <TextView
                    android:id="@+id/lblTabaru"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:padding="5dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/biaya" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua"
                    android:paddingEnd="5dp" />

                <TextView
                    android:id="@+id/lblBiaya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:padding="5dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/waiver1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua"
                    android:paddingEnd="5dp" />

                <TextView
                    android:id="@+id/lblWaiver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:padding="5dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/raider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua"
                    android:paddingEnd="5dp" />

                <TextView
                    android:id="@+id/lblRaider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:padding="5dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/aviasi1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua"
                    android:paddingEnd="5dp" />

                <TextView
                    android:id="@+id/lblAviasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:padding="5dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ekstra" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua"
                    android:paddingEnd="5dp" />

                <TextView
                    android:id="@+id/lblEkstra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:padding="5dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/titipan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua"
                    android:paddingEnd="5dp" />

                <TextView
                    android:id="@+id/lblTitipan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:padding="5dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nilaiKontribusi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titik_dua"
                    android:paddingEnd="5dp" />

                <TextView
                    android:id="@+id/lblNilaiKontribusi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

        </TableLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>