<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorContent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dataPersonal"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_below="@id/linear"
                android:layout_gravity="center_horizontal">

                <TableRow>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cif" />

                    <TextView
                        android:paddingEnd="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titik_dua"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/noCif"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/nama" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titik_dua" />

                    <TextView
                        android:id="@+id/nama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/jk" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titik_dua" />

                    <TextView
                        android:id="@+id/jk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/kotaKelahiran" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titik_dua" />

                    <TextView
                        android:id="@+id/kotaKelahiran"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tglLahir" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titik_dua" />

                    <TextView
                        android:id="@+id/tglLahir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                </TableRow>

            </TableLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorContent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dataAsuransi"
                    android:textSize="22dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_below="@id/linear1"
                android:layout_gravity="center_horizontal">

                <TableRow>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/macamAsuransi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        android:text="@string/titik_dua" />

                    <TextView
                        android:id="@+id/macamAsuransi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""/>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/mulaiAsuransi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        android:text="@string/titik_dua" />

                    <TextView
                        android:id="@+id/mulaiAsuransi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""/>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/akhirAsuransi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        android:text="@string/titik_dua" />

                    <TextView
                        android:id="@+id/akhirAsuransi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""/>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/masaAsuransi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        android:text="@string/titik_dua" />

                    <TextView
                        android:id="@+id/masaAsuransi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""/>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/nilaiKontribusi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        android:text="@string/titik_dua" />

                    <TextView
                        android:id="@+id/nilaiKontribusi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""/>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/masaPK" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        android:text="@string/titik_dua" />

                    <TextView
                        android:id="@+id/masaPK"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""/>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/caraBayar" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        android:text="@string/titik_dua" />

                    <TextView
                        android:id="@+id/caraBayar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""/>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/manfaatAwal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        android:text="@string/titik_dua" />

                    <TextView
                        android:id="@+id/manfaatAwal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""/>

                </TableRow>

            </TableLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>