<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@drawable/background3"
    tools:context=".RiwayatPKActivity">

    <TextView
        android:id="@+id/lbl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/riwayatPK"
        android:textSize="21sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <TableLayout
        android:id="@+id/tblAtas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbl1"
        android:layout_marginTop="15dp">

        <TableRow>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/nopol" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titik_dua"
                android:paddingEnd="5dp" />

            <TextView
                android:id="@+id/lblNopol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

        </TableRow>

    </TableLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/tblAtas">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/pk_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp" />

    </RelativeLayout>

</RelativeLayout>