<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background3"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:background="@color/colorBackground3">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:src="@drawable/logo"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/userLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtPolis"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/judul"
                    android:layout_marginTop="15dp"
                    android:textSize="22sp"
                    android:ems="10"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="30dp"
                app:passwordToggleDrawable="@drawable/pass"
                app:passwordToggleTint="@color/colorAccent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass"
                    android:textSize="22sp"
                    android:ems="10"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnCek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@drawable/button"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="30dp"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btnRegis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regis"
                android:layout_marginTop="10dp"
                android:background="@drawable/button"
                android:textSize="22sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>